deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: {DEPLOYMENT_NAME}-ingress
  namespace: {NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: {API_HOST}
    http:
      paths:
      - backend:
          service:
            name: {DEPLOYMENT_NAME}-svc
            port:
              number: 8080
        pathType: ImplementationSpecific
        path: /palabra-azar
